# python-apache-beam-spark

./: .gitignore  deployment.yaml  example.py  pyproject.toml
scripts/: start-minikube.sh  start-services.sh
